--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,24 +1,3 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { 
-          "key": "Access-Control-Allow-Origin", 
-          "value": "https://movie-flix-app-lac.vercel.app" 
-        },
-        { 
-          "key": "Access-Control-Allow-Methods", 
-          "value": "GET,POST,PUT,DELETE,OPTIONS" 
-        },
-        { 
-          "key": "Access-Control-Allow-Headers", 
-          "value": "X-Requested-With, Content-Type, Authorization, Accept" 
-        }
-      ]
-    }
-  ]
+    "rewrites":[{"source":"/(.*)","destination":"/index.html"}]
 }
